ref: update morgan flavor and get all registered users
